<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_HNHT_CentralMachineHeatingDefaultParameters" Id="{035b9f39-77fc-4f0d-8eef-9fe873174160}">
    <Declaration><![CDATA[TYPE ST_HNHT_CentralMachineHeatingDefaultParameters :
STRUCT
	aSetPointLimitsRelativeSpeed : ARRAY[1..2] OF REAL := [0,100];
	aSetPointLimitsTemperatureDifference : ARRAY[1..2] OF REAL := [5,10];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>